2003-06-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pr-output.cc (set_format (const Matrix&, int&, double&)): Ask
	any_element_is_negative to return true for negative zero as well.
	(set_format (const ComplexMatrix&, int&, int&, double&)): Likewise.

2003-06-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* toplev.cc (main_loop): Set octave_interrupt_hook and
	octave_bad_alloc_hook to unwind_protect::run_all here.
	(recover_from_exception): Don't call unwind_protect::run_all here.

	* pt-except.cc (do_catch_code): Return immediately if
	octave_interrupt_immediately is nonzero.

	* sighandlers.cc (sigint_handler): If jumping, don't set
	octave_interrupt_state.

2003-06-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (get_save_type): Avoid all save types other than
	LS_DOUBLE to avoid apparent Matlab bugs.

2003-06-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* parse.y (frob_function, parse_fcn_file): Handle help_buf as
	stack of strings.
	* lex.l ({CCHAR}): Handle help_buf as stack of strings.
	Store text returned from grab_help_text in help_buf here.
	(reset_parser): Handle help_buf as stack of strings.
	(prep_for_nested_function): Push empty string onto help_buf stack.
	(grab_help_text): Return help text instead of storing it in help_buf.
	* parse.h, parse.y (help_buf): Now a stack of strings.

	* oct-stream.cc (printf_value_cache::string_value): Don't attempt
	to extract values when none are available.

2003-06-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-plot.cc (Vgnuplot_has_multiplot): Delete variable.
	(gnuplot_has_multiplot): Delete.
	(symbols_of_pt_plot): Delete DEFVAR for gnuplot_has_multiplot.

2003-05-28  Teemu Ikonen <tpikonen@pcu.helsinki.fi>

	* load-save.cc (save_mat5_binary_element, save_mat_binary_data):
	Allow saving of non-7-bit ASCII characters.

2003-05-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stream.cc (FINISH_CHARACTER_CONVERSION,
	octave_base_stream::do_scanf): Do a better job of resizing for